Updated: Base settings and app name.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrome-ap",
+  "name": "bloc",
   "dependencies": {
     "ember": "1.13.7",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
@@ -11,8 +11,10 @@
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0",
+    "qunit": "~1.18.0"
+  },
+  "devDependencies": {
     "sass-susy": "susy#latest",
-    "compass-breakpoint": "compass-breakpoint#latest",
+    "compass-breakpoint": "compass-breakpoint#latest"
   }
 }
